Reimplement RpmBuildContext using JNI
For now call rpmExpand through JNI instead of FMA.
FMA is available only on limited set of architectures.