@@ -114,11 +114,41 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <configuration>
+              <target>
+                <property environment="env"/>
+                <property name="env.JAVA_HOME" value="/usr/lib/jvm/java"/>
+                <property name="env.CC" value="cc"/>
+                <property name="env.CFLAGS" value="-g -Wall -Wextra"/>
+                <property name="env.LDFLAGS" value=""/>
+                <exec executable="${env.CC}">
+                  <arg line="-std=c99 -shared -fPIC"/>
+                  <arg value="-I${env.JAVA_HOME}/include"/>
+                  <arg value="-I${env.JAVA_HOME}/include/linux"/>
+                  <arg line="${env.CFLAGS}"/>
+                  <arg line="-l rpmio"/>
+                  <arg line="${env.LDFLAGS}"/>
+                  <arg value="-o"/>
+                  <arg value="${project.build.outputDirectory}/xmvn-generator-native.so"/>
+                  <arg value="${project.basedir}/src/main/jni/xmvn-generator-native.c"/>
+                </exec>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
-        <configuration>
-          <argLine>--enable-preview --add-modules jdk.incubator.foreign --enable-native-access ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
